--- a/majom.html
+++ b/majom.html
@@ -5,20 +5,40 @@
     <link rel="stylesheet" href="majom.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css" integrity="sha512-Pbzg3qX9J0NGTmD2iF0wCws98NQa/2qlVepyz64dA68tLFbX9TkjPHtznZfBlIwCymefk2vt+v48KwyD+hPTbw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title>Majmok</title>
 </head>
 <body>
-	<header>
+	<header class="container-fluid">
+	 <div class="row">
+	   <div class="col-12">
 		<h1>Majmok</h1>
+	   </div>
+	 </div>
 	</header>
-    <div>
+    <div class="menu container">
+		<div class="row">
+			<div class="col-12">
         <h1>Menü:</h1>
         <a href="majomfelek.html" target="_blank">Majomfélék</a>
         <a href="hazimajom.html" target="_blank">Házimajmok</a>
         <a href="felepites.html" target="_blank">Felépítésük</a>
+			</div>
+		</div>
     </div>
-	<main>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div div class="col-12">
+	 <img src="https://ocdn.eu/images/pulscms/N2E7MDA_/69bcf5c6d226cac648e1221010da71f0.jpg" alt="Majom" title="Majom">
+	        </div>
+	    </div>
+    </div>
+
+	<main class="container">
 		<section id="tulajdonsagok">
+			<div class="row">
+				<div class="col-12">
 			<h2>Tulajdonságok</h2>
 			<p>A majmok az emberszabásúak családjába tartoznak. Nagyon okosak és intelligensek. Több fajtájuk ismert, mint például a csimpánz, gorilla, orangután, gibon és a mandrill.</p>
 
@@ -27,20 +47,30 @@
             <p>A majmok érdekes viselkedést mutatnak, sok fajuk társas életet él, amelynek középpontjában az alfa-hím áll. Az alfa-hím a csoport fejének számít, ő irányítja a társas életet, és rendelkezik az élelemforrások fölötti prioritással.</p>
 
             <p>A majmok intelligensek és alkalmazkodóképesek, képesek eszközöket használni az élelmiszer megszerzéséhez és az életkörülményeik javításához. Például, a csimpánzok szivacsot használnak az ivóvíz megszerzéséhez, az orangutánok pedig építenek magas fészekaljakat, amelyekben pihenhetnek.</p>
+		        </div>
+		    </div>
 		</section>
 		<section id="elelmiszer">
+			<div class="row">
+				<div class="col-12">
 			<h2>Élelmiszer</h2>
 			<p>A majmok többnyire növényevők, de előfordul, hogy fogyasztanak állati eredetű táplálékot is, például rovarokat, madarakat és kisebb állatokat. Szeretik az édes gyümölcsöket és a leveleket.</p>
 
             <p>Az emberekkel való találkozásuk és az élelmiszer elvételére való hajlamuk miatt a majmokat gyakran vonzó célpontnak tekintik a vadászok és a családok, amelyek az erdők közelében élnek.</p>
+				</div>
+			</div>
 		</section>
 		<section id="elohely">
+			<div class="row">
+				<div class="col-12">
 			<h2>Élőhely</h2>
 			<p>A majmok többnyire az esőerdőkben élnek, de előfordulnak szavannákon és hegyvidékeken is. Az élőhelyüket folyamatosan fenyegeti az erdőirtás és a természetes élőhelyük szűkülése.</p>
 
             <p>Sajnos, a majmok élőhelye folyamatosan fenyegetve van az erdőirtás és a természetes élőhelyük szűkülése miatt. Az illegális vadászat és az állatkertekben történő börtönben tartásuk is tovább növeli az állományuk csökkenését. Az emberi tevékenység hatására egyes fajok már kihalóban vannak, mint például a Sumátrai orangután.</p>
 
             <p>Fontos, hogy megóvjuk a majmok élőhelyét, és megőrizzük az élővilág sokszínűségét. Az életük és fajuk megőrzése az emberek felelőssége, akiknek támogatniuk kell a természetvédelmi programokat és figyelmet kell fordítaniuk a védett területek megőrzésére. A majmok sok érdekes tulajdonsággal és viselkedéssel rendelkeznek.</p>
+				</div>
+			</div>
 		</section>
 	</main>
 </body>
