--- a/majomfelek.html
+++ b/majomfelek.html
@@ -34,6 +34,34 @@
     <p>
         <h2>Makákó (Macaca)</h2>
     A makákók ázsiai és afrikai erdőkben élnek, és társas állatok.A makákók között számos alfaj van, amelyek különböző életmódokat és viselkedéseket mutatnak. Néhány alfajuk például nagyon ügyesnek bizonyul a szerszámhasználatban, míg mások inkább agresszívabbak és területvédőbbek. Az emberi társadalomban is gyakran használják őket különböző kutatásokban és kísérletekben.</p>
+
+    <h2>Rendszerezésük</h2>
+    <ul>
+       <li>Szélesorrú majmok vagy újvilági majmok (Platyrrhini) csoportjába 4 élő család tartozik</li>
+       <ol>
+            <li>Csuklyásmajomfélék (Cebidae)</li>
+            <li>Pókmajomfélék (Atelidae)</li>
+            <li>Sátánmajomfélék (Pithecidae)</li>
+            <li>Éjimajomfélék (Aotidae)</li>
+       </ol>
+    </ul>
+    <br>
+       <ul> 
+        <li>Keskenyorrú majmok vagy óvilági majmok (Catarrhini) csoportjába 2 öregcsalád 3 családja tartozik</li>
+        <ol>
+            <li>Cerkófszerűek (Cercopithecoidea)</li>
+            <li>Cerkóffélék (Cercopithecidae)</li>
+        </ol>
+      </ul>
+      <br>
+      <ul>
+        <li>Emberszerűek (Hominoidea)</li>
+        <ol>
+            <li>Gibbonfélék (Hylobatidae)</li>
+            <li>Emberfélék (Hominidae)</li>
+        </ol>
+    </ul>
+    
  </main>
 </body>
 </html>
