--- a/felepites.html
+++ b/felepites.html
@@ -31,10 +31,12 @@
 
         <p>A majomkéz, már azáltal, hogy a hüvelyk a többi ujj tövéhez viszonyítva sokkal hátrább fekszik s e mellett csökevényesedésre, sőt eltűnésre hajlik, finomabb munkákra jóval kevésbbé alkalmas, mint az emberé. Működése inkább csak a táplálék megfogása s a fákon való mászás körüli tevékenységben merül ki. Mindamellett nem vonhatjuk kétségbe, hogy pl. a híres „bolhászkodás” közben „hegyes ujjakkal”, vagyis a hüvelykkel és mutatóujjal igen finom dolgokat meg tudnak fogni. Vannak ugyan földön élő fajaik is, mégis a majmokat általában kúszó és fán élő állatoknak kell tekintenünk. Ez azonban ne vezessen bennünket annyira félre, hogy négykezűeknek tartsuk őket, mint ahogyan az a legutóbbi időkig történt. Mert a majmoknak, mint kúszó állatoknak, egyszerűen fogódzó lábuk van, melynek az a jellemző tulajdonsága, hogy a hüvelykujj a többitől messzire elterpeszthető. A majomláb azonban ennek ellenére is csak láb marad: sarka van, akárcsak minden más lábnak, s az alszárcsonttal felső felszíne ízül, nem pedig a hátsó, mint ahogyan azt az ember kezének az alkarral való ízülésénél látjuk.</p>
 
-        <h2>Forrás:</h2><a href="https://mek.oszk.hu/00500/00542/html/02.htm" target="_blank">https://mek.oszk.hu/00500/00542/html/02.htm</a>
-
+        
 
     </main>
+    <footer>
+        <h2>Forrás:</h2><a href="https://mek.oszk.hu/00500/00542/html/02.htm" target="_blank" class="link">https://mek.oszk.hu/00500/00542/html/02.htm</a>
+    </footer>
     
 </body>
 </html>
