--- a/hazimajom.html
+++ b/hazimajom.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Házi majmok</h1>
+        <img src="https://scontent-vie1-1.xx.fbcdn.net/v/t1.15752-9/334887372_193133030004098_8839704841694929637_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=ae9488&_nc_ohc=7iAXiBn7O8gAX-jkJGI&_nc_oc=AQlhC7bBf1mjCT5ysRllfb9tEcY5ML8b9QlCYaf5McG0bpLDplIv3YL3T_ZuI8NHcVE&_nc_ht=scontent-vie1-1.xx&oh=03_AdQ_1k_7fcfSU6vy6411rN0T7Htzyf_ewHdVT1u8YLCToA&oe=646B36A3" alt="Balogh" title="Balogh" id="balogh">
     </header>
  <main>
     <p>A házi majmok olyan emberszabásúak, amelyeket az emberek tartanak otthon, gyakran háziállatként vagy cirkuszi állatként. A házi majmok lehetnek kis méretű törpenyulak, tamarinek vagy makik, de nagyobb méretűek is lehetnek, mint például a kapucinus majmok, a gibonok vagy az orangutánok.</p>
