--- a/majom.html
+++ b/majom.html
@@ -73,5 +73,8 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<h1>Készítette: Kereszturi Barnabás és Csillag Ákos</h1><h2>&#128511;&#128511;&#128511;</h2>
+	</footer>
 </body>
 </html>
