--- a/majomfelek.html
+++ b/majomfelek.html
@@ -63,5 +63,9 @@
     </ul>
     
  </main>
+ <footer>
+    <h2>Forrás:</h2>
+    <a href="https://hu.wikipedia.org/wiki/Majomalkat%C3%BAak" target="_blank" class="link">https://hu.wikipedia.org/wiki/Majomalkat%C3%BAak</a>
+ </footer>
 </body>
 </html>
