--- a/hazimajom.html
+++ b/hazimajom.html
@@ -20,5 +20,10 @@
     <p>Fontos megjegyezni, hogy a házi majmok tartása több országban is tiltott, mivel az állatok veszélyesek lehetnek az emberekre és a környezetükre. A házi majmok olyan állatok, amelyeknek az életkörülményeihez és szükségleteihez nagyon nehéz megfelelni a családi otthonban. Ezért, ha valaki majmot szeretne tartani, fontos előzetesen alaposan tájékozódni a fajra vonatkozóan, és biztosítani számára megfelelő életkörülményeket, étrendet és orvosi ellátást.</p>
     <img src="https://kep.cdn.indexvas.hu/1/0/1900/19004/190042/19004223_fed841bffd4b949be6b570a4dd90dc87_wm.jpg" alt="Vicces majom" title="Vicces majom">
  </main>
+ <footer>
+    <br>
+    <br>
+    <br>
+ </footer>
 </body>
 </html>
