--- a/majomfelek.html
+++ b/majomfelek.html
@@ -35,6 +35,36 @@
         <h2>Makákó (Macaca)</h2>
     A makákók ázsiai és afrikai erdőkben élnek, és társas állatok.A makákók között számos alfaj van, amelyek különböző életmódokat és viselkedéseket mutatnak. Néhány alfajuk például nagyon ügyesnek bizonyul a szerszámhasználatban, míg mások inkább agresszívabbak és területvédőbbek. Az emberi társadalomban is gyakran használják őket különböző kutatásokban és kísérletekben.</p>
 
+    <table border="3">
+        <thead>
+          <tr>
+            <th>Faj</th>
+            <th>Leírás</th>
+            <th>Élőhely</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Mandril</td>
+            <td>A mandril nagy, színes arcával és kék-fehér farkával jól felismerhető. A hímek akár 120 cm hosszúak is lehetnek.</td>
+            <td>Afrika, Kongó-medence</td>
+          </tr>
+          <tr>
+            <td>Gorilla</td>
+            <td>A gorilla a legnagyobb élő majom, hatalmas testét pedig erős izomzat és vastag szőrzet fedi.</td>
+            <td>Afrika, erdős területek</td>
+          </tr>
+          <tr>
+            <td>Csimpánz</td>
+            <td>A csimpánzok rendkívül intelligensek és társas állatok, akik eszközöket is használnak az élelem megszerzéséhez.</td>
+            <td>Afrika, trópusi erdők</td>
+          </tr>
+        </tbody>
+      </table>
+      
+
+    <img src="https://cdn.pixabay.com/photo/2023/03/09/15/56/monkeys-7840321_960_720.jpg" alt="Majmok" title="Majmok">
+
     <h2>Rendszerezésük</h2>
     <ul>
        <li>Szélesorrú majmok vagy újvilági majmok (Platyrrhini) csoportjába 4 élő család tartozik</li>
