--- a/felepites.html
+++ b/felepites.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="majom.css">
-    <title>Felépítésük</title>
+    <title>A majmok felépítése</title>
 </head>
 <body>
     <header>
-        <h1>Felépítésük</h1>
+        <h1>A majmok felépítése</h1>
     </header>
     <main>
-
+        <h1>Csontvázrendszerük</h1>
+        <br>
        <p>A majmok testnagysága tág határok között változik. Amíg a gorilla az erős férfinél is nagyobb, addig a selyem-majmocska a mókus nagyságát sem éri el. Testük külalakja is nagyon különböző, amint azt ezek az általában nagyon találó elnevezések: „emberszabású majom”, „kutyafejű majom”, „mókus-majom”, minden hosszas leírásnál jobban kifejezik. Az egyik tömzsi, a másik nyúlánk, ez idomtalan, az kecses alkatú; az egyiknek vaskos, a másiknak nyúlánk végtagjai vannak. Legtöbbjüknek hosszú a farka, némelyiké rövid, egyeseknek meg egyáltalán nincs farkuk. Ugyanígy van a szőrözettel is. Az egyiknek ritka szőrözet fedi a testét, a másikét meg sűrű bunda takarja. Vedlés, a többi emlősök mintájára, kétségkívül a majmoknál is van. Bizonyos időben ugyanis azt látjuk, hogy a majmok szőrüket hullatják. Ekkor ők is „rosszbőrben” vannak, később azonban ismét símák és szépszőrűek lesznek. Szőrözetük, ellentétben a madarak tollruhájával, általában komor. Olykor azonban élénk, tetszetős színű bundájuk van. Különben általános szabály s erre a legfeltűnőbb példákat éppen a majmok között találjuk, hogy ahol az emlősállat teste rikító, világos színű, az ott magától a csupasz vagy szőrrel csak gyéren fedett (arc, far) bőrtől ered. Fehérszőrűek (albino) a majmok között is előfordulnak. Hazájukban, pl. Sziámban, Abessziniában nagyra értékelik az ilyeneket s a fejedelmek szelídítve tartják.</p>
 
        <img src="https://mek.oszk.hu/03400/03408/html/img/thumb/brehm-01-018-2.jpg" alt="csontváz" title="Majom csontváz">
