--- a/majom.html
+++ b/majom.html
@@ -72,6 +72,32 @@
 				</div>
 			</div>
 		</section>
+		<h2>Rendszerezésük</h2>
+    <ul>
+       <li>Szélesorrú majmok vagy újvilági majmok (Platyrrhini) csoportjába 4 élő család tartozik</li>
+       <ol>
+            <li>Csuklyásmajomfélék (Cebidae)</li>
+            <li>Pókmajomfélék (Atelidae)</li>
+            <li>Sátánmajomfélék (Pithecidae)</li>
+            <li>Éjimajomfélék (Aotidae)</li>
+       </ol>
+    </ul>
+    <br>
+    <ul> 
+        <li>Keskenyorrú majmok vagy óvilági majmok (Catarrhini) csoportjába 2 öregcsalád 3 családja tartozik</li>
+        <ol>
+            <li>Cerkófszerűek (Cercopithecoidea)</li>
+            <li>Cerkóffélék (Cercopithecidae)</li>
+        </ol>
+      </ul>
+      <br>
+      <ul>
+        <li>Emberszerűek (Hominoidea)</li>
+        <ol>
+            <li>Gibbonfélék (Hylobatidae)</li>
+            <li>Emberfélék (Hominidae)</li>
+        </ol>
+    </ul>
 	</main>
 	<footer>
 		<h1>Készítette: Kereszturi Barnabás és Csillag Ákos</h1><h2>&#128511;&#128511;&#128511;</h2>
