--- a/hazimajom.html
+++ b/hazimajom.html
@@ -13,6 +13,33 @@
         <img src="https://scontent-vie1-1.xx.fbcdn.net/v/t1.15752-9/334887372_193133030004098_8839704841694929637_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=ae9488&_nc_ohc=7iAXiBn7O8gAX-jkJGI&_nc_oc=AQlhC7bBf1mjCT5ysRllfb9tEcY5ML8b9QlCYaf5McG0bpLDplIv3YL3T_ZuI8NHcVE&_nc_ht=scontent-vie1-1.xx&oh=03_AdQ_1k_7fcfSU6vy6411rN0T7Htzyf_ewHdVT1u8YLCToA&oe=646B36A3" alt="Balogh" title="Balogh" id="balogh">
     </header>
  <main>
+    <div class="menu container">
+		<div class="row">
+			<div class="col-12">
+    <nav class="nav">
+			
+        <div class="nav-links-container">
+            <h1>Menü:</h1>
+            <a href="majom.html" class="nav-link">
+                <span class="nav-text">Majom</span>
+                <ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+            </a>
+            <a href="majomfelek.html" class="nav-link">
+                <span class="nav-text">Majomfélék</span>
+                <ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+            </a>
+            
+            <a href="felepites.html" class="nav-link">
+                <span class="nav-text">Felépítésük</span>
+                <ion-icon name="accessibility-outline" size="large"></ion-icon>
+            </a>
+        </div>
+    </nav>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <h1>Házi majmok</h1>
     <br>
     <p>A házi majmok olyan emberszabásúak, amelyeket az emberek tartanak otthon, gyakran háziállatként vagy cirkuszi állatként. A házi majmok lehetnek kis méretű törpenyulak, tamarinek vagy makik, de nagyobb méretűek is lehetnek, mint például a kapucinus majmok, a gibonok vagy az orangutánok.</p>
