--- a/felepites.html
+++ b/felepites.html
@@ -12,6 +12,33 @@
         <h1>A majmok felépítése</h1>
     </header>
     <main>
+        <div class="menu container">
+            <div class="row">
+                <div class="col-12">
+        <nav class="nav">
+			
+			<div class="nav-links-container">
+				<h1>Menü:</h1>
+                <a href="majom.html" class="nav-link">
+					<span class="nav-text">Majom</span>
+					<ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+				</a>
+				<a href="majomfelek.html" class="nav-link">
+					<span class="nav-text">Majomfélék</span>
+					<ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+				</a>
+				<a href="hazimajom.html" class="nav-link">
+					<span class="nav-text">Házimajmok</span>
+					<ion-icon name="home-outline" size="large"></ion-icon>
+				</a>
+				
+			</div>
+		</nav>
+                </div>
+            </div>
+        </div>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <h1>Csontvázrendszerük</h1>
         <br>
        <p>A majmok testnagysága tág határok között változik. Amíg a gorilla az erős férfinél is nagyobb, addig a selyem-majmocska a mókus nagyságát sem éri el. Testük külalakja is nagyon különböző, amint azt ezek az általában nagyon találó elnevezések: „emberszabású majom”, „kutyafejű majom”, „mókus-majom”, minden hosszas leírásnál jobban kifejezik. Az egyik tömzsi, a másik nyúlánk, ez idomtalan, az kecses alkatú; az egyiknek vaskos, a másiknak nyúlánk végtagjai vannak. Legtöbbjüknek hosszú a farka, némelyiké rövid, egyeseknek meg egyáltalán nincs farkuk. Ugyanígy van a szőrözettel is. Az egyiknek ritka szőrözet fedi a testét, a másikét meg sűrű bunda takarja. Vedlés, a többi emlősök mintájára, kétségkívül a majmoknál is van. Bizonyos időben ugyanis azt látjuk, hogy a majmok szőrüket hullatják. Ekkor ők is „rosszbőrben” vannak, később azonban ismét símák és szépszőrűek lesznek. Szőrözetük, ellentétben a madarak tollruhájával, általában komor. Olykor azonban élénk, tetszetős színű bundájuk van. Különben általános szabály s erre a legfeltűnőbb példákat éppen a majmok között találjuk, hogy ahol az emlősállat teste rikító, világos színű, az ott magától a csupasz vagy szőrrel csak gyéren fedett (arc, far) bőrtől ered. Fehérszőrűek (albino) a majmok között is előfordulnak. Hazájukban, pl. Sziámban, Abessziniában nagyra értékelik az ilyeneket s a fejedelmek szelídítve tartják.</p>
