--- a/majom.html
+++ b/majom.html
@@ -19,10 +19,29 @@
     <div class="menu container">
 		<div class="row">
 			<div class="col-12">
-        <h1>Menü:</h1>
-        <a href="majomfelek.html" target="_blank">Majomfélék</a>
-        <a href="hazimajom.html" target="_blank">Házimajmok</a>
-        <a href="felepites.html" target="_blank">Felépítésük</a>
+        
+		<nav class="nav">
+			
+			<div class="nav-links-container">
+				<h1>Menü:</h1>
+				
+				<a href="majomfelek.html" class="nav-link">
+					<span class="nav-text">Majomfélék</span>
+					<ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+				</a>
+				<a href="hazimajom.html" class="nav-link">
+					<span class="nav-text">Házimajmok</span>
+					<ion-icon name="home-outline" size="large"></ion-icon>
+				</a>
+				<a href="felepites.html" class="nav-link">
+					<span class="nav-text">Felépítésük</span>
+					<ion-icon name="accessibility-outline" size="large"></ion-icon>
+				</a>
+			</div>
+		</nav>
+		<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+		<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+		
 			</div>
 		</div>
     </div>
