--- a/felepites.html
+++ b/felepites.html
@@ -20,12 +20,12 @@
 			<div class="nav-links-container">
 				<h1>Menü:</h1>
                 <a href="majom.html" class="nav-link">
-					<span class="nav-text">Majom</span>
+					<span class="nav-text">Főoldal</span>
 					<ion-icon name="file-tray-full-outline" size="large"></ion-icon>
 				</a>
 				<a href="majomfelek.html" class="nav-link">
 					<span class="nav-text">Majomfélék</span>
-					<ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+					<ion-icon name="heart-outline" size="large"></ion-icon>
 				</a>
 				<a href="hazimajom.html" class="nav-link">
 					<span class="nav-text">Házimajmok</span>
