--- a/majomfelek.html
+++ b/majomfelek.html
@@ -20,7 +20,7 @@
     <div class="nav-links-container">
       <h1>Menü:</h1>
       <a href="majom.html" class="nav-link">
-        <span class="nav-text">Majom</span>
+        <span class="nav-text">Főoldal</span>
         <ion-icon name="file-tray-full-outline" size="large"></ion-icon>
       </a>
       
