--- a/majom.html
+++ b/majom.html
@@ -27,7 +27,7 @@
 				
 				<a href="majomfelek.html" class="nav-link">
 					<span class="nav-text">Majomfélék</span>
-					<ion-icon name="file-tray-full-outline" size="large"></ion-icon>
+					<ion-icon name="heart-outline" size="large"></ion-icon>
 				</a>
 				<a href="hazimajom.html" class="nav-link">
 					<span class="nav-text">Házimajmok</span>
